Fix flickering focus outline for .up-focus-hidden elements

--- a/src/unpoly/viewport.sass
+++ b/src/unpoly/viewport.sass
@@ -2,7 +2,7 @@ up-bounds
   position: absolute
 
 .up-focus-hidden:focus-visible
-  outline: none !important
+  outline-color: transparent !important
 
 body.up-scrollbar-away
   overflow-y: hidden !important
